--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #mariaDB Connection
 spring.datasource.url=jdbc:mariadb://localhost:3306/rsr_data
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=scott
+spring.datasource.password=tiger
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
