--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-dropdown": "^1.11.0",
     "react-notifications": "^1.7.4",
     "react-scripts": "^2.1.3",
